# kundli-kombat

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  render.yaml
.github/workflows/: ci-cd.yml
apps/api/: .env.example  pyproject.toml
apps/api/data/: celebrities.json
apps/api/src/kundli_kombat/: __init__.py  agency.py  battle_math.py  battle_stats.py  battles.py  config.py  convex_client.py  ephemeris.py  geocoding.py  hermes.py  linkup.py  main.py  models.py  observability.py  onboarding.py  policy.py  voice.py
apps/api/tests/: test_battle_math.py  test_battle_stats.py  test_ephemeris.py  test_geocoding.py  test_health.py  test_hermes.py  test_onboard.py  test_policy.py  test_reading.py  test_voice.py
apps/web/: .env.example  index.html  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/web/src/: battle-ui.test.ts  battle-ui.ts  battle-v2.css  main.tsx  plain-language.css  responsive.css  session.css  styles.css  vite-env.d.ts
convex/: battles.ts  celebrities.ts  escalations.ts  health.ts  hermes.ts  places.ts  players.ts  readings.ts  schema.ts
convex/_generated/: api.d.ts
docs/: CI_CD.md  ENV_SETUP.md
evals/: memory-isolation-01.json
hermes/kundli/: SKILL.md
hermes/kundli/references/: hermes-api-contract.md
hermes/kundli/scripts/: call_hermes.py
scripts/: dev-api.sh  seed_celebrities.py  setup-api.sh  start-tunnel.sh  verify_chart.py
workers/api-gateway/: package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
workers/transit-ticker/: package.json  wrangler.jsonc
(+3 files in other folders)
