[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kundli-kombat-api"
version = "0.1.0"
description = "FastAPI agency for Kundli Kombat"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "langfuse>=4.7,<5",
  "openai>=2.7,<3",
  "pydantic-settings>=2.7,<3",
  "python-dotenv>=1.0,<2",
  "uvicorn[standard]>=0.34,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1"
]

[tool.hatch.build.targets.wheel]
packages = ["src/kundli_kombat"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

